--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       margin: 0%;
       }
     </style>
-    <title>React App</title>
+    <title>Ingredientes em Foco</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
